Agrego graficos de trabajadores

--- a/apps/templates/home/graph-my_graphics.html
+++ b/apps/templates/home/graph-my_graphics.html
@@ -28,6 +28,10 @@
       <div class="row mb-2">
         <div class="col-sm-6">
           <h1>Recursos Humanos</h1>
+          <!-- Total Usuarios -->
+          <div>Total Usuarios: <span id="totalUsuarios"></span></div>
+          <!-- Total Trabajadores -->
+          <div>Total Trabajadores: <span id="totalTrabajadores"></span></div>
         </div>
         <div class="col-sm-6">
           <div class="row">
@@ -65,7 +69,7 @@
       <div class="row">
         <!-- HEADCOUNT POR SEXO - Gráfico de barras -->
         <div class="col-md-4">
-            <div class="card card-primary">
+            <div class="card card-info">
             <div class="card-header">
                 <h3 class="card-title">HEADCOUNT POR SEXO</h3>
                 <div class="card-tools">
@@ -126,11 +130,11 @@
           </div>
         </div>
   
-        <!-- HEADCOINT POR AREA - Gráfico de barras 2D vertical -->
+        <!-- HEADCOUNT POR AREA - Gráfico de barras 2D vertical -->
         <div class="col-md-4">
           <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">HEADCOINT POR AREA</h3>
+              <h3 class="card-title">HEADCOUNT POR AREA</h3>
               <div class="card-tools">
                 <button
                   type="button"
@@ -160,7 +164,7 @@
   
         <!-- NACIONALIDAD - Gráfico de barras -->
         <div class="col-md-4">
-          <div class="card card-primary">
+          <div class="card card-info">
             <div class="card-header">
               <h3 class="card-title">NACIONALIDAD</h3>
               <div class="card-tools">
@@ -224,7 +228,7 @@
   
         <!-- Nivel Educativo - Gráfico de barras 2D vertical -->
         <div class="col-md-4">
-          <div class="card card-primary">
+          <div class="card card-success">
             <div class="card-header">
               <h3 class="card-title">Nivel Educativo</h3>
               <div class="card-tools">
@@ -256,7 +260,7 @@
   
         <!-- INGENIEROS COLEGIADOS - Gráfico de barras -->
         <div class="col-md-4">
-          <div class="card card-primary">
+          <div class="card card-success">
             <div class="card-header">
               <h3 class="card-title">INGENIEROS COLEGIADOS</h3>
               <div class="card-tools">
