He completado satisfactoriamente los graficos

--- a/apps/templates/home/graph-my_graphics.html
+++ b/apps/templates/home/graph-my_graphics.html
@@ -98,11 +98,11 @@
             </div>
             </div>
         </div>
-        <!-- HEADCOUNT PRO PROYECTO - Gráfico de barras 3D -->
+        <!-- HEADCOUNT POR PROYECTO - Gráfico de barras 3D -->
         <div class="col-md-4">
           <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">HEADCOUNT PRO PROYECTO</h3>
+              <h3 class="card-title">HEADCOUNT POR PROYECTO</h3>
               <div class="card-tools">
                 <button
                   type="button"
@@ -123,7 +123,7 @@
             <div class="card-body">
               <!-- Aquí va el código del gráfico de barras 3D para HEADCOUNT PRO PROYECTO -->
               <canvas
-                id="headcountProyectoChart"
+                id="headcountPorProyectoChart"
                 style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"
               ></canvas>
             </div>
@@ -155,7 +155,7 @@
             <div class="card-body">
               <!-- Aquí va el código del gráfico de barras 2D vertical para HEADCOINT POR AREA -->
               <canvas
-                id="headcountAreaChart"
+                id="headcountPorAreaChart"
                 style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"
               ></canvas>
             </div>
