--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -10,7 +10,7 @@
   >
   <div class="float-right d-none d-sm-inline-block">
     <span
-      >Desarrollado por Roger Infa Sanchez, GitHub:
+      >Adaptado por Roger Infa Sanchez, GitHub:
       <a target="_blank" href="https://github.com/rinfasulasalle"
         >@rinfasulasalle</a
       ></span
