Agregamos funcion para hacer post a un endopint
Co-authored-by: kurtzubia <kurtzubia@users.noreply.github.com>>

--- a/apps/templates/home/graph-my_graphics.html
+++ b/apps/templates/home/graph-my_graphics.html
@@ -36,6 +36,7 @@
       <div class="row mb-2">
         <div class="col-sm-6">
           <h1>Recursos Humanos</h1>
+          <br />
           <!-- Total Usuarios -->
           <div>Total Usuarios: <span id="totalUsuarios"></span></div>
           <!-- Total Trabajadores -->
@@ -61,9 +62,9 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="filterButton" class="invisible">Filtrar:</label>
-                <button type="button" class="btn btn-primary form-control" id="filterButton">Filtrar</button>
+                <button type="button" class="btn btn-primary form-control" id="filterButton" disabled>Filtrar</button>
                 <!-- Agrega este botón donde desees en tu vista -->
-                <button type="button" class="btn btn-success" id="exportPDF">Exportar a PDF</button>
+                <button type="button" class="btn btn-success form-control" id="exportPDF" disabled>Exportar a PDF</button>
               </div>
             </div>
           </div>
