--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -139,6 +139,15 @@
                 <p>Trabajadores</p>
               </a>
             </li>
+            <li class="nav-item">
+              <a
+                href="/forms-trabajador-incompletos.html"
+                class="nav-link {% if 'forms-general' in segment %} active {% endif %}"
+              >
+                <i class="far fa-circle nav-icon"></i>
+                <p>Registros Incompletos</p>
+              </a>
+            </li>
           </ul>
         </li>
         <li class="nav-header">EXAMPLES</li>
