--- a/apps/templates/home/forms-trabajador.html
+++ b/apps/templates/home/forms-trabajador.html
@@ -219,7 +219,11 @@ endblock %}
                 </div>
                 <div class="form-group">
                   <label for="trabajador_fecha_ingreso">Fecha de Ingreso</label>
-                  <input type="date" class="form-control" name="trabajador_fecha_ingreso" />
+                  <input
+                    type="date"
+                    class="form-control"
+                    name="trabajador_fecha_ingreso"
+                  />
                 </div>
                 <div class="form-group">
                   <label for="trabajador_exp_previa">Experiencia Previa</label>
@@ -263,128 +267,83 @@ endblock %}
                   />
                 </div>
                 <div class="form-group">
-                  <label for="trabajador_estado_civil">Estado Civil</label>
-                  <select class="form-control" name="trabajador_estado_civil">
+                  <label for="estudio_condicion">Estado</label>
+                  <select class="form-control" name="estudio_condicion">
                     <option value="Habilitado">Habilitado</option>
                     <option value="No habilitado">No habilitado</option>
                     <option value="XXXXX">XXXXX</option>
                   </select>
                 </div>
-                ('Habilitado', 'Habilitado'),
-            ('No habilitado', 'No habilitado'),
-            ('XXXXX', 'XXXXX'),
-
                 <div class="form-group">
-                  <label for="nivelEducativo">Nivel Educativo</label>
-                  <select class="form-control" id="nivelEducativo">
-                    <option value="sin_educacion_formal">
-                      Sin Educación Formal
-                    </option>
-                    <option value="educacion_especial_incompleta">
-                      Educación Especial Incompleta
-                    </option>
-                    <option value="educacion_especial_completa">
-                      Educación Especial Completa
-                    </option>
-                    <option value="educacion_primaria_incompleta">
-                      Educación Primaria Incompleta
-                    </option>
-                    <option value="educacion_primaria_completa">
-                      Educación Primaria Completa
-                    </option>
-                    <option value="educacion_secundaria_incompleta">
-                      Educación Secundaria Incompleta
-                    </option>
-                    <option value="educacion_secundaria_completa">
-                      Educación Secundaria Completa
-                    </option>
-                    <option value="educacion_tecnica_incompleta">
-                      Educación Técnica Incompleta
-                    </option>
-                    <option value="educacion_tecnica_completa">
-                      Educación Técnica Completa
-                    </option>
-                    <option value="educacion_superior_incompleta">
-                      Educación Superior (Instituto Superior, etc) Incompleta
-                    </option>
-                    <option value="educacion_superior_completa">
-                      Superior Completa (Instituto Superior)
-                    </option>
-                    <option value="educacion_universitaria_incompleta">
-                      Educación Universitaria Incompleta
-                    </option>
-                    <option value="educacion_universitaria_completa">
-                      Universitaria Completa
-                    </option>
-                    <option value="grado_de_bachiller">
-                      Grado de Bachiller
-                    </option>
-                    <option value="titulado">Titulado</option>
-                    <option value="estud_maestria_incompleta">
-                      Estud. Maestría Incompleta
-                    </option>
-                    <option value="estud_maestria_completa">
-                      Estud. Maestría Completa
-                    </option>
-                    <option value="grado_de_maestria">Grado de Maestría</option>
-                    <option value="estudios_de_doctorado_incompleto">
-                      Estudios de Doctorado Incompleto
-                    </option>
-                    <option value="estudios_de_doctorado_completo">
-                      Estudios de Doctorado Completo
-                    </option>
-                    <option value="grado_de_doctor">Grado de Doctor</option>
-                    <option value="no_especificado" selected>
-                      No Especificado
-                    </option>
+                  <label for="id_estudio_nivel_educativo">Nivel Educativo</label>
+                  <select class="form-control" name="id_estudio_nivel_educativo" id="id_estudio_nivel_educativo">
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="id_sede_colegiatura">Sede Colegiatura</label>
+                  <select class="form-control"
+                  name="id_sede_colegiatura"
+                  id="id_sede_colegiatura">
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="estudio_fecha_colegiatura">Fecha colegiatura</label>
+                  <input
+                    type="date"
+                    class="form-control"
+                    name="estudio_fecha_colegiatura"
+                    id="estudio_fecha_colegiatura"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="id_estudio_situacion_especial">Situación Especial</label>
+                  <select class="form-control" name="id_estudio_situacion_especial"
+                  id="id_estudio_situacion_especial">
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="id_regimen_laboral">Regimen Laboral</label>
+                  <select class="form-control"
+                  name="id_regimen_laboral"
+                  id="id_regimen_laboral">
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="id_regimen_aseguramiento">Regimen Aseguramiento</label>
+                  <select class="form-control"
+                  name="id_regimen_aseguramiento"
+                  id="id_regimen_aseguramiento">
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="id_institucion">Institución</label>
+                  <select class="form-control"
+                  name="id_institucion"
+                  id="id_institucion">
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="id_carrera_educativa">Carrera</label>
+                  <select class="form-control"
+                  name="id_carrera_educativa"
+                  id="id_carrera_educativa">
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="id_estudio_capacitacion">Capacitación</label>
+                  <select class="form-control"
+                  name="id_estudio_capacitacion"
+                  id="id_estudio_capacitacion">
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="id_estudio_especializacion">Especialización</label>
+                  <select class="form-control"
+                  name="id_estudio_especializacion"
+                  id="id_estudio_especializacion">
                   </select>
                 </div>
 
-                <div class="form-group">
-                  <label for="situacionEspecial">Situación Especial</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="situacionEspecial"
-                    placeholder="Situación especial no especificada"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="regimenLaboral">Régimen Laboral</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="regimenLaboral"
-                    placeholder="Régimen laboral no especificado"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="aseguramiento">Aseguramiento</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="aseguramiento"
-                    placeholder="Aseguramiento no especificado"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="institucion">Institución</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="institucion"
-                    placeholder="Institución no especificada"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="carreraEducativa">Carrera Educativa</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="carreraEducativa"
-                    placeholder="Carrera no especificada"
-                  />
-                </div>
               </div>
               <div class="card-footer">
                 <button type="submit" class="btn btn-secondary">
